<resources>
    <string name="app_name">City Hygiene</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="company_name">City Hygiene</string>
    <string name="reg_details">Request Login Details</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="logout">LogOut</string>
    <string name="change_password">ChangePassword</string>
    <string name="submit_order">Submit Order</string>
    <string name="contacts">contacts</string>
    <string name="add">add</string>
    <string name="request_sent_to_admin">request sent to admin</string>
</resources>
