<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:text="@string/company_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/bright_blue"
        android:textSize="60sp"
        app:fontFamily="cursive"
        app:layout_constraintEnd_toStartOf="@+id/gl_right"
        app:layout_constraintHorizontal_bias="0.407"
        app:layout_constraintStart_toStartOf="@+id/gl_left"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/password_field"
        android:layout_width="230dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="84dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/blue_font"
        android:textColorHint="@color/blue_font_dark"
        app:layout_constraintBottom_toTopOf="@+id/gl_bottom"
        app:layout_constraintEnd_toStartOf="@+id/gl_right"
        app:layout_constraintStart_toStartOf="@+id/gl_left"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/email_field"
        android:layout_width="230dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/password_field"
        android:layout_marginBottom="132dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/blue_font"
        android:textColorHint="@color/blue_font_dark"
        app:layout_constraintBottom_toTopOf="@+id/gl_bottom"
        app:layout_constraintEnd_toStartOf="@+id/gl_right"
        app:layout_constraintStart_toStartOf="@+id/gl_left" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="253dp"
        android:layout_height="34dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="372dp"
        android:background="@drawable/button_selector"
        android:text="@string/login"
        app:layout_constraintEnd_toStartOf="@+id/gl_right"
        app:layout_constraintHorizontal_bias="0.578"
        app:layout_constraintStart_toStartOf="@+id/gl_left"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <android.support.constraint.Guideline
        android:id="@+id/gl_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="69dp" />

    <android.support.constraint.Guideline
        android:id="@+id/gl_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="319dp" />

    <android.support.constraint.Guideline
        android:id="@+id/gl_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="426dp" />

    <android.support.constraint.Guideline
        android:id="@+id/gl_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="0dp" />

    <Button
        android:id="@+id/reg_req"
        android:layout_width="140dp"
        android:layout_height="21dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/bg_color"
        android:text="@string/reg_details"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/gl_right"
        app:layout_constraintHorizontal_bias="0.616"
        app:layout_constraintStart_toStartOf="@+id/gl_left"
        app:layout_constraintTop_toTopOf="@+id/gl_bottom"
        app:layout_constraintVertical_bias="1.0" />

</android.support.constraint.ConstraintLayout>